--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         }
 
         h1 {
-            font-weight: 300;
+            font-weight: 500;
             margin-bottom: 20px;
             color: #2c3e50;
         }
@@ -57,7 +57,9 @@
 </head>
 <body>
 
+    
     <h1>Location & Weather Data</h1>
+    <h3>Using basic Javascript API knowledge I know information from you like:</h3>
     <div id="results"></div>
 
     <script>
